kubernetes/infra/knative/operator/app/netpol-webhook.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/v1/networkpolicy.json
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-webhook-ingress
  namespace: knative
spec:
  podSelector:
    matchLabels:
      role: operator-webhook
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-apiserver
      ports:
        - port: 443
          protocol: TCP
        - port: 9090
          protocol: TCP
        - port: 8008
          protocol: TCP
